fixed adverts on mobile

--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 8px;
-  padding-left: 12px;
+  gap: 7%;
+  padding-left: 2%;
   transition:
     flex 5s ease-in-out,
     padding-left 5s ease-in-out;
@@ -191,6 +191,25 @@ body {
   font-size: 20px;
   color: #ffffffbb;
   margin-right: 8px;
+}
+
+@media (max-width: 650px), (max-height: 550px) {
+  #banner {
+    height: 20%;
+  }
+  #banner-body {
+    gap: 4%;
+  }
+  .banner-header {
+    font-size: 15px;
+  }
+  .banner-text {
+    font-size: 15px;
+  }
+  .banner-time {
+    font-size: 13.5px;
+    margin-right: 4px;
+  }
 }
 
 #banner > div:nth-child(2) {
